--- a/src/core-setup/tools-local/tasks/core-setup.tasks.csproj
+++ b/src/core-setup/tools-local/tasks/core-setup.tasks.csproj
@@ -26,7 +26,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="NuGet.ProjectModel">
-      <Version>4.3.0-rtm-4324</Version>
+      <Version>4.3.0-preview2-4095</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.DependencyModel">
       <Version>1.1.1</Version>
