--- a/src/core-setup/tools-local/tasks/core-setup.tasks.csproj
+++ b/src/core-setup/tools-local/tasks/core-setup.tasks.csproj
@@ -3,8 +3,8 @@
   <Import Project="$([MSBuild]::GetDirectoryNameOfFileAbove($(MSBuildThisFileDirectory), dir.props))\dir.props" />
   <PropertyGroup>
     <OutputType>Library</OutputType>
-    <NuGetTargetMoniker>.NETStandard,Version=v1.5</NuGetTargetMoniker>
-    <NuGetTargetMonikerShort>netstandard1.5</NuGetTargetMonikerShort>
+    <NuGetTargetMoniker>.NETStandard,Version=v1.3</NuGetTargetMoniker>
+    <NuGetTargetMonikerShort>netstandard1.3</NuGetTargetMonikerShort>
     <NuGetTargetMoniker Condition="'$(TargetGroup)' == 'net45'">.NETFramework,Version=v4.5.1</NuGetTargetMoniker>
     <NuGetTargetMonikerShort Condition="'$(TargetGroup)' == 'net45'">net451</NuGetTargetMonikerShort>
     <CLSCompliant>false</CLSCompliant>
@@ -25,8 +25,17 @@
     <Compile Include="*.cs" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="NuGet.Common">
+      <Version>4.3.0-preview2-4095</Version>
+    </PackageReference>
+    <PackageReference Include="NuGet.Frameworks">
+      <Version>4.3.0-preview2-4095</Version>
+    </PackageReference>
+    <PackageReference Include="NuGet.Packaging">
+      <Version>4.3.0-preview2-4095</Version>
+    </PackageReference>
     <PackageReference Include="NuGet.ProjectModel">
-      <Version>4.3.0-rtm-4324</Version>
+      <Version>4.3.0-preview2-4095</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.DependencyModel">
       <Version>1.1.1</Version>
