--- a/targets/core-setup.props
+++ b/targets/core-setup.props
@@ -26,5 +26,6 @@
     <RepositoryReference Include="corefx" />
     <RepositoryReference Include="newtonsoft-json" />
     <RepositoryReference Include="standard" />
+    <RepositoryReference Include="nuget-client" />
   </ItemGroup>
 </Project>
