Update common src to match servicing/1.0.x branch
https://github.com/aspnet/Common/tree/servicing/1.0.x
Sha:be9aca0f20c979498298be47e843e3a7b8777dca

The common repo ships from the servicing 1.0.x branch which
has the patches removed so also deleted the patches with
this update.

--- a/src/common/.gitignore
+++ b/src/common/.gitignore
@@ -32,7 +32,9 @@ nuget.exe
 *.ncrunchsolution
 *.*sdf
 *.ipch
+*.binlog
 .settings
 *.sln.ide
 node_modules
 **/[Cc]ompiler/[Rr]esources/**/*.js
+global.json
