--- a/src/common/.appveyor.yml
+++ b/src/common/.appveyor.yml
@@ -6,8 +6,10 @@ branches:
     - release
     - dev
     - /^(.*\/)?ci-.*$/
+    - servicing/1.0.x
 build_script:
-  - build.cmd verify
+  - build.cmd /p:Configuration=Release
 clone_depth: 1
 test: off
 deploy: off
+os: Visual Studio 2017
