--- a/src/common/.travis.yml
+++ b/src/common/.travis.yml
@@ -1,36 +1,19 @@
 language: csharp
-sudo: required
+sudo: false
 dist: trusty
-addons:
-  apt:
-    packages:
-    - gettext
-    - libcurl4-openssl-dev
-    - libicu-dev
-    - libssl-dev
-    - libunwind8
-    - zlib1g
+dotnet: 2.0.0
+mono: none
 env:
-  - KOREBUILD_DNU_RESTORE_CORECLR=true KOREBUILD_TEST_DNXCORE=true
-mono:
-  - 4.0.5
-os:
-  - linux
-  - osx
-osx_image: xcode7.1
+  global:
+    - DOTNET_SKIP_FIRST_TIME_EXPERIENCE: true
+    - DOTNET_CLI_TELEMETRY_OPTOUT: 1
+    - SkipNetFramework: true
 branches:
   only:
     - master
     - release
     - dev
     - /^(.*\/)?ci-.*$/
-before_install:
-  - if test "$TRAVIS_OS_NAME" == "osx"; then brew update; brew install openssl; brew link --force openssl; fi
+    - servicing/1.0.x
 script:
-  - ./build.sh verify
-notifications:
-  webhooks:
-    secure: "f5AkDPK6qOC5C6X9cvblwgnTxO0gehlSoCcWMjF5yEywmZ1xPtNFzOSznCYsmFCZIzVDQNi/+T1KqrXV9SlQvOj5ESZbxC38Ej2etqorusiVco22l0LGgggXynJ6KSoNS9J5qNFxChmUXBK65TQJJ5CiMXOSOiJGX2X24zbJKKw="
-  on_success: always
-  on_failure: always
-  on_start: always
+  - ./build.sh -p:Configuration=Release
