--- a/src/common/src/Microsoft.Extensions.CommandLineUtils/Microsoft.Extensions.CommandLineUtils.csproj
+++ b/src/common/src/Microsoft.Extensions.CommandLineUtils/Microsoft.Extensions.CommandLineUtils.csproj
@@ -1,22 +1,16 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <TargetFrameworks>net451;netstandard1.3</TargetFrameworks>
+    <!-- For configurations that do not compiling for .NET Framework -->
+    <TargetFrameworks Condition=" '$(SkipNETFramework)' == 'true' ">netstandard1.3</TargetFrameworks>
+
     <Description>Command-line parsing API. Commonly used types:
 Microsoft.Extensions.CommandLineUtils.CommandLineApplication
 Microsoft.Extensions.CommandLineUtils.CommandOption</Description>
-    <VersionPrefix>1.0.1</VersionPrefix>
-    <TargetFrameworks>netstandard1.3</TargetFrameworks>
     <NoWarn>$(NoWarn);CS1591</NoWarn>
-    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
-    <AssemblyName>Microsoft.Extensions.CommandLineUtils</AssemblyName>
-    <AssemblyOriginatorKeyFile>../../tools/Key.snk</AssemblyOriginatorKeyFile>
-    <SignAssembly>true</SignAssembly>
-    <PublicSign>true</PublicSign>
-    <PackageId>Microsoft.Extensions.CommandLineUtils</PackageId>
     <PackageTags>commandline;parsing</PackageTags>
-    <RepositoryType>git</RepositoryType>
-    <RepositoryUrl>https://github.com/aspnet/common</RepositoryUrl>
     <GenerateNeutralResourcesLanguageAttribute>false</GenerateNeutralResourcesLanguageAttribute>
     <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
     <GenerateAssemblyCopyrightAttribute>false</GenerateAssemblyCopyrightAttribute>
@@ -26,15 +20,16 @@ Microsoft.Extensions.CommandLineUtils.CommandOption</Description>
 
   <ItemGroup Condition=" '$(TargetFramework)' == 'net451' ">
     <Reference Include="System" />
+    <Reference Include="System.Core" />
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
 
   <ItemGroup Condition=" '$(TargetFramework)' == 'netstandard1.3' ">
-    <PackageReference Include="System.Collections" Version="4.0.11" />
-    <PackageReference Include="System.Console" Version="4.0.0" />
-    <PackageReference Include="System.IO" Version="4.1.0" />
-    <PackageReference Include="System.Linq" Version="4.1.0" />
-    <PackageReference Include="System.Resources.ResourceManager" Version="4.0.1" />
+    <PackageReference Include="System.Collections" Version="$(SystemCollectionsPackageVersion)" />
+    <PackageReference Include="System.Console" Version="$(SystemConsolePackageVersion)" />
+    <PackageReference Include="System.IO" Version="$(SystemIOPackageVersion)" />
+    <PackageReference Include="System.Linq" Version="$(SystemLinqPackageVersion)" />
+    <PackageReference Include="System.Resources.ResourceManager" Version="$(SystemResourcesResourceManagerPackageVersion)" />
   </ItemGroup>
 
 </Project>
