Update cli-deps-satellites to match what shipped in 2.1.4
Looking at sha's of the resource assemblies that shipped with 2.1.4
they point to sha 0ebf7499296fe714103dc70a09b67b279d012c53 in
http://github.com/dotnet/cli-deps-satellites

--- a/src/cli-deps-satellites/NuGet.config
+++ b/src/cli-deps-satellites/NuGet.config
@@ -2,8 +2,9 @@
 <configuration>
   <packageSources>
     <clear />
-    <add key="source-built" value="/home/chris/2.0.5/dotnet/bin/obj/x64/Release/source-built/" />
-    <add key="prebuilt" value="/home/chris/2.0.5/dotnet/prebuilt/nuget-packages/" />
+    <add key="dotnet-core" value="https://dotnetfeed.blob.core.windows.net/dotnet-core/index.json" />
+    <add key="api.nuget.org" value="https://api.nuget.org/v3/index.json" protocolVersion="3" />
+    <add key="dotnet.myget.org roslyn-tools" value="https://dotnet.myget.org/F/roslyn-tools/api/v3/index.json" protocolVersion="3" />
   </packageSources>
   <config>
     <add key="repositoryPath" value=".nuget\packages" />
