--- a/src/cli-deps-satellites/src/Directory.Build.props
+++ b/src/cli-deps-satellites/src/Directory.Build.props
@@ -33,7 +33,8 @@
     <AssemblyOriginatorKeyFile>$(MSBuildThisFileDirectory)..\build\$(StrongNameKey).snk</AssemblyOriginatorKeyFile>
     <SignToolConfig>$(MSBuildThisFileDirectory)..\build\$(StrongNameKey).json</SignToolConfig>
     <SignAssembly>true</SignAssembly>
-    
+    <SkipSignSatellites Condition="'$(SkipSignSatellites)' == '' and '$(DotNetBuildFromSource)' == 'true'">true</SkipSignSatellites>
+
     <!-- Use delay signing instead of public signing on full msbuild to workaround https://github.com/Microsoft/msbuild/issues/1490 -->
     <PublicSign Condition="'$(SignType)' != 'real' and '$(MSBuildRuntimeType)' == 'Core'">true</PublicSign>
     <DelaySign Condition="'$(PublicSign)' != 'true'">true</DelaySign>
@@ -42,7 +43,7 @@
     <Authors>Microsoft Corporation</Authors>
     <Copyright>© Microsoft Corporation. All rights reserved.</Copyright>
     <BuildEpoch>20170101</BuildEpoch>
-    <VersionPrefix>2.3.0</VersionPrefix>
+    <VersionPrefix>2.6.0</VersionPrefix>
     <VersionPrefix Condition="$(IsFSharp)">4.4.1</VersionPrefix>
     <BuildNumber Condition="'$(BuildNumber)' == ''">$(BUILD_BUILDNUMBER)</BuildNumber>
     <BuildNumber Condition="'$(BuildNumber)' == ''">99999999-99</BuildNumber>
