Update websdk to what shipped with 2.1.4
https://github.com/dotnet/cli/blob/5e8add2190a75e5578bf6ac90dc6dfee8c69e578/build/DependencyVersions.props#L22
points to build 671 which points to 5ab771ee5333ffa83fd7521ff6308ef863c04594
in branch https://github.com/aspnet/websdk/tree/rel .

--- a/src/websdk/NuGet.config
+++ b/src/websdk/NuGet.config
@@ -1,7 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <packageSources>
-    <add key="source-built" value="/home/chris/2.0.5/dotnet/bin/obj/x64/Release/source-built/" />
-    <add key="prebuilt" value="/home/chris/2.0.5/dotnet/prebuilt/nuget-packages/" />
+    <add key="NuGet" value="https://api.nuget.org/v3/index.json" />
+    <add key="DotNetCore" value="https://dotnet.myget.org/F/dotnet-core/api/v3/index.json" />
+    <add key="BuildTools" value="https://dotnet.myget.org/F/msbuild/api/v3/index.json" />
+    <add key="NuGetBuild" value="https://www.myget.org/F/nugetbuild/api/v3/index.json" />
   </packageSources>
 </configuration>
