--- a/src/websdk/src/Web/Microsoft.NET.Sdk.Web.Targets/Sdk.props
+++ b/src/websdk/src/Web/Microsoft.NET.Sdk.Web.Targets/Sdk.props
@@ -11,6 +11,12 @@ Copyright (c) .NET Foundation. All rights reserved.
 -->
 <Project ToolsVersion="14.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
 
+  <!-- Default properties that shouldn't be replaced by the microsoft.net.sdk.props -->
+  <PropertyGroup>
+    <DebugSymbols Condition="'$(DebugSymbols)' == ''">true</DebugSymbols>
+    <PreserveCompilationContext Condition="'$(PreserveCompilationContext)' == ''">true</PreserveCompilationContext>
+  </PropertyGroup>
+
   <Import Sdk="Microsoft.NET.Sdk" Project="Sdk.props" />
   
   <Import Sdk="Microsoft.NET.Sdk.Web.ProjectSystem" Project="Sdk.props" />
