--- a/src/cli/src/redist/redist.csproj
+++ b/src/cli/src/redist/redist.csproj
@@ -21,6 +21,10 @@
     <PackageReference Include="Microsoft.TestPlatform.CLI" Version="$(CLI_TestPlatform_Version)" />
     <PackageReference Include="Microsoft.TestPlatform.Build" Version="$(CLI_TestPlatform_Version)" />
     <PackageReference Include="NuGet.ProjectModel" Version="$(CLI_NuGet_Version)" />
+    <PackageReference Include="NuGet.Commands" Version="$(CLI_NuGet_Version)" />
+    <PackageReference Include="NuGet.DependencyResolver.Core" Version="$(CLI_NuGet_Version)" />
+    <PackageReference Include="NuGet.LibraryModel" Version="$(CLI_NuGet_Version)" />
+    <PackageReference Include="NuGet.Protocol" Version="$(CLI_NuGet_Version)" />
     <PackageReference Include="Microsoft.NETCore.Compilers" Version="$(CLI_Roslyn_Version)">
       <ExcludeAssets>All</ExcludeAssets>
     </PackageReference>
@@ -96,7 +100,8 @@
     <DotNetPublish
       ToolPath="$(Stage0Directory)"
       Configuration="$(Configuration)"
-      ProjectPath="$(SrcDirectory)/tool_roslyn_satellites/tool_roslyn_satellites.csproj" />
+      ProjectPath="$(SrcDirectory)/tool_roslyn_satellites/tool_roslyn_satellites.csproj"
+      MSBuildArgs="/p:Rid=$(Rid)" />
     <AddToDeps TargetDeps="@(RoslynDeps)" AdditionalDeps="@(RoslynSatelliteDeps)" />
     <Delete Files="@(RoslynSatelliteDeps)" />
   </Target>
@@ -106,7 +111,8 @@
           
     <DotNetPublish ToolPath="$(Stage0Directory)"
                    Configuration="$(Configuration)"
-                   ProjectPath="$(SrcDirectory)/tool_fsharp/tool_fsc.csproj" />
+                   ProjectPath="$(SrcDirectory)/tool_fsharp/tool_fsc.csproj" 
+                   MSBuildArgs="/p:Rid=$(Rid)" />
   </Target>
 
   <Target Name="GenerateCliRuntimeConfigurationFiles"
