--- a/src/cli/src/tool_msbuild/tool_msbuild.csproj
+++ b/src/cli/src/tool_msbuild/tool_msbuild.csproj
@@ -11,6 +11,6 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.NETCore.App" Version="$(CLI_SharedFrameworkVersion)" />
     <PackageReference Include="Microsoft.Build.Runtime" Version="$(ClI_MSBUILD_Runtime_Version)" />
-    <PackageReference Include="Microsoft.Build.Localization" Version="$(CLI_MSBuild_Version)" />
+    <PackageReference Include="Microsoft.Build.Localization" Version="15.3.409" />
   </ItemGroup>
 </Project>
