fix some version numbers, apply missing F# patch 0007, update F# nupkg path

--- a/src/fsharp/src/buildtools/fssrgen/fssrgen.fsproj
+++ b/src/fsharp/src/buildtools/fssrgen/fssrgen.fsproj
@@ -3,10 +3,12 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
     <DefineConstants>COMPILED;$(DefineConstant)</DefineConstants>
+    <DisableImplicitFSharpCoreReference>true</DisableImplicitFSharpCoreReference>
   </PropertyGroup>
 
   <ItemGroup>
     <Compile Include="fssrgen.fsx" />
+    <ProjectReference Include="../../fsharp/FSharp.Core/FSharp.Core.BuildFromSource.fsproj" />
   </ItemGroup>
 
 </Project>
