--- a/src/fsharp/NuGet.Config
+++ b/src/fsharp/NuGet.Config
@@ -1,8 +1,8 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <packageSources>
     <clear />
-    <add key="source-built" value="/home/chris/2.0.5/dotnet/bin/obj/x64/Release/source-built/" />
-    <add key="prebuilt" value="/home/chris/2.0.5/dotnet/prebuilt/nuget-packages/" />
+    <add key="api.nuget.org" value="https://api.nuget.org/v3/index.json" />
+    <add key="dotnet-core" value="https://dotnet.myget.org/F/dotnet-core/api/v3/index.json" />
   </packageSources>
 </configuration>
