--- a/src/core-setup/dir.props
+++ b/src/core-setup/dir.props
@@ -343,13 +343,13 @@
 
   <!-- Use actual publishable (non-dummy) package name produced by the build system for this RID -->
   <PropertyGroup Condition="'$(OutputRid)' != ''">
-    <PackageTargetRid Condition="'$(PackageTargetRid)' == ''">$(OutputRid)</PackageTargetRid>
-    <PackageTargetRid Condition="'$(OutputRid)' == 'osx.10.11-x64' AND '$(PackageTargetRid)' == ''">osx.10.10-x64</PackageTargetRid>
-    <PackageTargetRid Condition="'$(OutputRid)' == 'rhel.7.0-x64' AND '$(PackageTargetRid)' == ''">rhel.7-x64</PackageTargetRid>
-    <PackageTargetRid Condition="'$(OutputRid)' == 'rhel.7.1-x64' AND '$(PackageTargetRid)' == ''">rhel.7-x64</PackageTargetRid>
-    <PackageTargetRid Condition="'$(OutputRid)' == 'rhel.7.2-x64' AND '$(PackageTargetRid)' == ''">rhel.7-x64</PackageTargetRid>
-    <PackageTargetRid Condition="'$(OutputRid)' == 'rhel.7.3-x64' AND '$(PackageTargetRid)' == ''">rhel.7-x64</PackageTargetRid>
-    <PackageTargetRid Condition="'$(OutputRid)' == 'rhel.7.4-x64' AND '$(PackageTargetRid)' == ''">rhel.7-x64</PackageTargetRid>
+    <PackageTargetRid>$(OutputRid)</PackageTargetRid>
+    <PackageTargetRid Condition="'$(OutputRid)' == 'osx.10.11-x64'">osx.10.10-x64</PackageTargetRid>
+    <PackageTargetRid Condition="'$(OutputRid)' == 'rhel.7.0-x64'">rhel.7-x64</PackageTargetRid>
+    <PackageTargetRid Condition="'$(OutputRid)' == 'rhel.7.1-x64'">rhel.7-x64</PackageTargetRid>
+    <PackageTargetRid Condition="'$(OutputRid)' == 'rhel.7.2-x64'">rhel.7-x64</PackageTargetRid>
+    <PackageTargetRid Condition="'$(OutputRid)' == 'rhel.7.3-x64'">rhel.7-x64</PackageTargetRid>
+    <PackageTargetRid Condition="'$(OutputRid)' == 'rhel.7.4-x64'">rhel.7-x64</PackageTargetRid>
     <ProductMoniker>$(SharedFrameworkNugetVersion)-$(PackageTargetRid)</ProductMoniker>
     <HostResolverVersionMoniker>$(HostResolverVersion)-$(PackageTargetRid)</HostResolverVersionMoniker>
   </PropertyGroup>
