--- a/src/vstest/NuGet.config
+++ b/src/vstest/NuGet.config
@@ -6,12 +6,13 @@
   <packageSources>
     <!--To inherit the global NuGet package sources remove the <clear/> line below -->
     <clear />
+    <add key="source-built" value="/home/karajas/DotNet-Source-Build-Trusted/bin/obj/x64/Release/source-built/" />
     <add key="dotnet-core" value="https://dotnet.myget.org/F/dotnet-core/api/v3/index.json" />
     <add key="api.nuget.org" value="https://api.nuget.org/v3/index.json" />
     <add key="vstest" value="https://dotnet.myget.org/F/vstest/api/v3/index.json" />
     <add key="nuint.myget" value="https://www.myget.org/F/nunit/api/v3/index.json" />
     <add key="xunit.myget" value="https://www.myget.org/F/xunit/api/v3/index.json" />
-    <add key="mstest.myget" value="https://dotnet.myget.org/F/mstestv2/api/v3/index.json"/>
+    <add key="mstest.myget" value="https://dotnet.myget.org/F/mstestv2/api/v3/index.json" />
   </packageSources>
   <fallbackPackageFolders>
     <clear />
