Move publish as a post-build but pre-packaging step
We don't want to do a publish during restore stage as it will cause
a build. We also want to ensure we pass the same msbuild properties
as we did to build to ensure we get the same outputs.

--- a/targets/roslyn.props
+++ b/targets/roslyn.props
@@ -6,7 +6,9 @@
     <NuGetPackageVersion>2.6.0-pre-20171122-1</NuGetPackageVersion>
     <BuildNumber>20170721.5</BuildNumber>
     <CommitHash>ad0efbb6975c74e3e19051896be7ffcbb70d2122</CommitHash>
-    <BuildCommand>$(DotNetCommand) build $(ProjectDirectory)/CLI.sln /p:Configuration=$(Configuration) /p:OfficialBuild=true /p:BuildNumber=$(BuildNumber) /p:DotNetBuildFromSource=true</BuildCommand>
+    <BuildArgs>/p:Configuration=$(Configuration) /p:OfficialBuild=true /p:BuildNumber=$(BuildNumber) /p:DotNetBuildFromSource=true</BuildArgs>
+    <PublishArgs>-f netcoreapp2.0 $(BuildArgs)</PublishArgs>
+    <BuildCommand>$(DotNetCommand) build $(ProjectDirectory)/CLI.sln $(BuildArgs)</BuildCommand>
     <PackagesOutput>$(ProjectDirectory)/Binaries/packages</PackagesOutput>
   </PropertyGroup>
 
