--- a/targets/roslyn.targets
+++ b/targets/roslyn.targets
@@ -12,6 +12,12 @@
   </ItemGroup>
 
   <Target Name="Restore" BeforeTargets="Build">
+    <Exec Command="$(DotNetCommand) restore $(ProjectDirectory)/build/ToolsetPackages/BaseToolset.csproj"
+          WorkingDirectory="$(ProjectDirectory)"
+          EnvironmentVariables="@(EnvironmentVariables)" />
+    <Exec Command="$(DotNetCommand) restore $(ProjectDirectory)/build/ToolsetPackages/CoreToolset.csproj"
+          WorkingDirectory="$(ProjectDirectory)"
+          EnvironmentVariables="@(EnvironmentVariables)" />
     <Exec Command="$(DotNetCommand) restore $(ProjectDirectory)/CLI.sln"
           WorkingDirectory="$(ProjectDirectory)"
           EnvironmentVariables="@(EnvironmentVariables)" />
